Migrated to dynamic wro4j processing. Javascript and CSS resources are no longer minified on maven build, but at runtime. This allows javascript changes to be picked up on the fly.

--- a/geoportal/src/main/webapp/WEB-INF/views/jspf/includes.jspf
+++ b/geoportal/src/main/webapp/WEB-INF/views/jspf/includes.jspf
@@ -19,7 +19,7 @@ if (!Object.create) {
 		F.prototype = o;
 		return new F();
 	};
-};
+}
 </script>
 
 <c:choose>
@@ -28,9 +28,9 @@ if (!Object.create) {
       </c:when>
 
       <c:otherwise>
-      <link rel="stylesheet" href="resources/css/ogp.css" type="text/css" />
-     
-      <script type="text/javascript" src="resources/javascript/ogp.js"></script>
+            <link rel="stylesheet" href="wro/ogp.css" type="text/css"/>
+
+            <script type="text/javascript" src="wro/ogp.js"></script>
       </c:otherwise>
 </c:choose>
 
