Added simple controller to serve the user guide updated by UA. Removed some Tufts specific references.

--- a/geoportal/src/main/webapp/WEB-INF/views/jspf/mailto.jspf
+++ b/geoportal/src/main/webapp/WEB-INF/views/jspf/mailto.jspf
@@ -1,4 +1,4 @@
 <span class="geodataContact">For questions, comments, or to
 	report problems, please contact: <a
-	href="mailto:geodata@elist.tufts.edu">geodata@elist.tufts.edu</a>
+			href="mailto:help@opengeoportal.org">help at opengeoportal.org</a>
 </span>
