--- a/geoportal/src/main/webapp/WEB-INF/views/jspf/includes.jspf
+++ b/geoportal/src/main/webapp/WEB-INF/views/jspf/includes.jspf
@@ -1,8 +1,8 @@
 <%@ taglib prefix="spring" uri="http://www.springframework.org/tags" %>
-<script src="//maps.google.com/maps/api/js?v=3.20&sensor=false"></script>
+<script src="//maps.google.com/maps/api/js?v=3.25"></script>
 
 <script src="//cdn.jsdelivr.net/underscorejs/1.8.3/underscore-min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="//cdn.jsdelivr.net/backbonejs/1.3.3/backbone-min.js"></script>
 
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
@@ -16,14 +16,29 @@
 <link rel="stylesheet" href="${uitheme_css}" type="text/css"/>
 
 <script>
-if (!Object.create) {
-	Object.create = function(o) {
-		function F() {
-		}
-		F.prototype = o;
-		return new F();
-	};
-}
+      if (typeof Object.create != 'function') {
+            Object.create = (function (undefined) {
+                  var Temp = function () {
+                  };
+                  return function (prototype, propertiesObject) {
+                        if (prototype !== Object(prototype) && prototype !== null) {
+                              throw TypeError('Argument must be an object, or null');
+                        }
+                        Temp.prototype = prototype || {};
+                        var result = new Temp();
+                        Temp.prototype = null;
+                        if (propertiesObject !== undefined) {
+                              Object.defineProperties(result, propertiesObject);
+                        }
+
+                        // to imitate the case of Object.create(null)
+                        if (prototype === null) {
+                              result.__proto__ = null;
+                        }
+                        return result;
+                  };
+            })();
+      }
 </script>
 
 
