--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/search.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/search.jspf
@@ -1,13 +1,13 @@
 
-<div id="searchBox" class="searchBox shadowDownOuter">
+<div id="searchBox" class="searchBox">
 	<form id="searchForm" onsubmit="return false;">
-		<div id="searchCol1" class="searchCol">
+		<div id="searchCol2" class="searchCol">
 			<div id="geosearchDiv"
 				class="basicSearch whereBox searchFormRow searchRow1">
 				<label for="whereField"><span class="labelText">Where:</span></label>
 				<input id="whereField" type="search" />
 			</div>
-			<div class="advancedSearch searchFormRow searchRow2">
+			<div class="basicSearch searchFormRow searchRow2 checkOption">
 				<span class="formCheckbox searchFormInput"> <input
 					type="checkbox" name="mapFilterCheck" id="mapFilterCheck"
 					class="mapFilterFlag" value="ignore" /> <label
@@ -19,36 +19,38 @@
 				<div id="topicDropdown" class="searchFormInput"></div>
 			</div>
 		</div>
-		<div id="searchCol2" class="searchCol">
-			<div class="basicSearch whatBox searchFormRow">
+		<div id="searchCol1" class="searchCol">
+			<div class="basicSearch keywordBox searchFormRow searchRow1">
 				<label for="whatField"> <span class="labelText">What:</span>
 				</label> <input id="whatField" type="search" />
 			</div>
-			<div class="advancedSearch searchFormRow searchRow1">
+			<div class="advancedSearch searchFormRow keywordBox searchRow1">
 				<label for="advancedKeywordText">Keyword:</label> <input
 					name="advancedKeywordText" type="search" class="searchFormInput"
 					id="advancedKeywordText" />
 			</div>
-			<div class="advancedSearch searchFormRow searchRow2">
+			<div class="basicSearch searchFormRow searchRow2 checkOption">
+				<span class="formCheckbox searchFormInput"> <input type="checkbox" id="restrictedCheck" name="restrictedCheck" />
+					<label for=restrictedCheck">Include Restricted Data</label>
+				</span>
+			</div>
+			<div class="advancedSearch searchFormRow searchRow4">
 				<label>Data Type:</label>
 				<div id="dataTypeDropdown" class="styledDropdown searchFormInput">
 				</div>
 			</div>
-			<div class="advancedSearch searchFormRow searchRow3">
+			<div class="advancedSearch searchFormRow searchRow4">
 				<label>Repository:</label>
 				<div id="repositoryDropdown" class="searchFormInput"></div>
-			</div>
-			<div class="advancedSearch searchFormRow searchRow4">
-				<span class="formCheckbox searchFormInput"> <input
-					type="checkbox" name="restrictedCheck" id="restrictedCheck" /> 
-					<label for="restrictedCheck">Include Restricted Data</label>
-				</span>
 			</div>
 		</div>
 		<div id="searchCol3" class="searchCol">
 			<div class="basicSearch basicSearchButtons searchFormRow">
-				<button id="moreSearchOptions" class="searchToggle button offsetColor" tabindex="0" >Advanced
-					Search</button>
+			</div>
+			<div class="basicSearch searchFormRow searchRow2">
+				<button id="moreSearchOptions" class="searchToggle button offsetColor" tabindex="0">
+					<i class="fa fa-sort-desc" aria-hidden="true"></i>  Toggle Advanced Search
+				</button>
 			</div>
 			<div class="advancedSearch searchFormRow searchRow1">
 				<label for="advancedOriginatorText">Originator:</label> <input
@@ -64,8 +66,9 @@
 				</span>
 			</div>
 			<div class="advancedSearch searchFormRow advancedSearchButtons searchRow4">
-				<button id="lessSearchOptions" class="searchToggle button offsetColor" tabindex="0" >Basic
-					Search</button>
+				<button id="lessSearchOptions" class="searchToggle button offsetColor" tabindex="0" >
+					<i class="fa fa-sort-asc" aria-hidden="true"></i>  Toggle Basic Search
+				</button>
 			</div>
 		</div>
 	</form>
