--- a/geoportal_1/src/main/webapp/resources/css/structure.css
+++ b/geoportal_1/src/main/webapp/resources/css/structure.css
@@ -67,12 +67,6 @@ h4 {
 	box-shadow: 0px 3px 4px -1px #888888 inset;
 }
 
-.shadowDownOuter {
-	-moz-box-shadow: 0px 4px 6px -2px #888888;
-	-webkit-box-shadow: 0px 4px 6px -2px #888888;
-	box-shadow: 0px 4px 6px -2px #888888;
-}
-
 .shadowRight {
 	-moz-box-shadow: 3px 0px 4px 1px #888888 inset;
 	-webkit-box-shadow: 3px 0px 4px 1px #888888 inset;
@@ -96,7 +90,10 @@ background: linear-gradient(#6B91D5, #577CBE);
 filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#6B91D5', endColorstr='#577CBE');
 zoom: 1;
     border: 1px solid #6B91D5;
+    border-radius: 2px;
     color: #FFFFFF;
+    height: 23px;
+    margin-top: 2px;
 }
 
 li.searchAttribution.ui-widget-content.ui-menu-divider {
@@ -108,6 +105,10 @@ li.searchAttribution.ui-widget-content.ui-menu-divider {
 	float: right;
 	margin-top: 1px;
 	right: 17px;
+}
+
+#advancedSearchClear {
+	margin-top: 2px;
 }
 
 #sortDropdown {
@@ -199,12 +200,11 @@ li.searchAttribution.ui-widget-content.ui-menu-divider {
 
 /* Header */
 #header {
-	height: 120px;
+	height: 137px;
 	background-color: #ffffff;
 	/*border-right: #CCCCCC solid 1px;
 	border-left: #CCCCCC solid 1px;*/
 	border-bottom: #999999 solid 1px;
-	min-width: 1050px;
 }
 
 #logo {
@@ -323,7 +323,6 @@ li.searchAttribution.ui-widget-content.ui-menu-divider {
 	background-color: #fff;
 	overflow: hidden;
 	min-height: 512px;
-	min-width: 1050px;
 	position: relative;
 }
 
@@ -371,9 +370,12 @@ th >.ui-resizable-e {
 #left_col>.ui-resizable-se {
 	cursor: col-resize;
 	height: 100% !important;
-	right: 0;
-	width: 7px !important;
-	z-index: 2147483647 !important
+	right: -4px;
+	width: 5px !important;
+	z-index: 2147483647 !important;
+	top: 0px;
+	background: -webkit-linear-gradient(left, white, #7d7d7d);
+	background: -o-linear-gradient(right, white, #7d7d7d);
 }
 
 .tableHeader {
@@ -576,18 +578,19 @@ textarea:focus {
 
 .searchBox {
 	background: none repeat scroll 0 0 white;
-	border-bottom: 1px solid #CCCCCC;
+	border-bottom: 1px solid #727272;
 	font-family: arial, sans-serif;
 	font-size: 12px;
-	height: 30px;
-	padding-bottom: 23px;
+	height: 63px;
 	padding-top: 2px;
 	position: absolute;
-	top: 65px;
+	top: 72px;
 	width: 100%;
 	z-index: 1500;
-	min-width: 1050px;
-	
+}
+
+#searchBox {
+	color: #999999;
 }
 
 .scrollFiller {
@@ -620,6 +623,10 @@ textarea:focus {
 	width: 306px;
 }
 
+.basicSearch label {
+	55px;
+}
+
 .labelText {
 	padding-right: 5px;
 }
@@ -646,7 +653,9 @@ textarea:focus {
 }
 
 .basicSearch.basicSearchButtons.searchFormRow {
-    margin-left: -105px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
 }
 
 #basicSearchBox {
@@ -660,19 +669,30 @@ textarea:focus {
 	visibility: hidden;
 }
 
+#geosearchDiv input {
+	width: 220px;
+}
+
+.basicSearch.searchRow2 {
+	display: block;
+}
+
 .searchFormRow {
 	line-height: 27px;
 }
 
 .searchFormRow > label {
 	display: inline-block;
-	width: 76px;
-    font-family: arial;
-    font-size: 14px;
+	width: auto;
+    	font-family: arial;
+ 	font-size: 16px;
+	font-weight: 500;
+	color: #0755AC;
+	margin-right: 7px;
 }
 
 .searchFormRow.advancedSearch>label {
-	width: 77px;
+	width: 78px;
 }
 
 .searchFormRow.advancedSearch>input[type="search"] {
@@ -685,43 +705,60 @@ textarea:focus {
 }
 
 #searchForm {
-	display: inline-block;
+	display: table;
+	width: auto;
+	height: 56px;
+	padding-left: 56px;
 }
 
 .searchCol {
-	position: absolute;
+	position: relative;
 	/*width: 340px;*/
-	margin-right: 42px;
+	top: 3px;
+	margin-right: 15px;
+	display: inline-block;
+	vertical-align: top;
+	overflow: inherit;
 }
 
 #searchCol1 {
-	left: 50px;
+	left: 0px;
 }
 
 #searchCol2 {
-	left: 400px;
+	left: 0px;
 }
 
 #searchCol3 {
-	left: 750px;
+	left: 0px;
+	margin: 0px;
+	width: auto;
+}
+
+#searchCol2 label {
+	width: 56px;
+}
+
+#searchCol3 .basicSearch {
+	width: auto;
 }
 
 .searchToggle {
 	background: none;
-    border: none;
-	text-decoration: underline;
+ 	border: none;
+	text-decoration: none;
 	white-space: nowrap;
 	font-size: 11px;
 	display: inline-block;
 }
 
-.searchToggle span:hover {
-	color: yellow;
+.searchToggle hover {
+	text-decoration: underline;
 }
 
 .whereBox {
 	color: #0755AC;
-	font-weight: bold;
+	font-weight: normal;
 }
 
 .whatBox {
@@ -831,7 +868,6 @@ textarea:focus {
 	border-right: none;
 	font-size: 13px;
 	width: 100%;
-	min-width: 1050px;
 }
 
 #footerLogos {
@@ -1887,6 +1923,10 @@ zoom: 1;
         color:white;
 }
 
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+	text-shadow: none;
+}
+
 .ui-menu .ui-menu-item a {
         line-height:1.5em;
         font-size:1.2em;
@@ -1923,4 +1963,7 @@ zoom: 1;
 #roll_right:hover {
         background-color: #A5A5A5;
 }
-                                 
+
+#header, #container, #searchBox, #footer {
+	min-width: 1060px;
+}
