moved basemap config to json file, moved XML config and some properties config to the json file (ogp_config.json) Wrote java code to read new config file, inject into the HomeController, replace some older java code for reading xml config files. Work toward using leaflet active area plugin.

--- a/geoportal/src/main/webapp/resources/css/mapDiv.css
+++ b/geoportal/src/main/webapp/resources/css/mapDiv.css
@@ -306,6 +306,10 @@ div.olControlMousePosition {
     box-shadow: 3px 0 5px -1px #777777;
 }
 
+.viewport {
+	position: absolute;
+}
+
 .olHandlerBoxZoomBox {
 	border: 2px solid red;
 	position: absolute;
