moved basemap config to json file, moved XML config and some properties config to the json file (ogp_config.json) Work toward using leaflet active area plugin.

--- a/geoportal/src/main/webapp/resources/css/mapDiv.css
+++ b/geoportal/src/main/webapp/resources/css/mapDiv.css
@@ -308,6 +308,14 @@ div.olControlMousePosition {
 
 .viewport {
 	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+}
+
+.leaflet-left {
+	left: 25px;
 }
 
 .olHandlerBoxZoomBox {
