fix map behavior with Leaflet (integration with UI elements, etc.) fix 'Save Image' and 'Print' functions fix geocoder integration with Leaflet fix search integration with Leaflet fix get feature info integration with Leaflet

--- a/geoportal/src/main/webapp/WEB-INF/views/jspf/about.jspf
+++ b/geoportal/src/main/webapp/WEB-INF/views/jspf/about.jspf
@@ -12,8 +12,8 @@
 	<p>
         OGP 2.0 is the most current release. which includes a new enhanced interface,
         interoperability for several web mapping platforms, etc.
-        The project’s code repository is hosted on github.
-        Installation instructions are in the repository’s README.
+        The project's code repository is hosted on github.
+        Installation instructions are in the repository's README.
 	</p>
 	<p>
 		<%@include file="mailto.jspf"%>
