--- a/geoportal_1/src/main/webapp/WEB-INF/views/jspf/includes.jspf
+++ b/geoportal_1/src/main/webapp/WEB-INF/views/jspf/includes.jspf
@@ -5,7 +5,7 @@
 <script src="resources/javascript/jquery.scrollTo-min.js"></script>
 <script src="resources/javascript/spinners/spinners/spinners.min.js"></script>
 <script src="resources/javascript/jquery.ba-postmessage.min.js"></script>
-<script src="//maps.google.com/maps/api/js?v=3.10&sensor=false"></script>
+<script src="https://maps.google.com/maps/api/js?v=3.30&key=${gmapsAPIKey}"></script>
 <script src="resources/javascript/openlayers/OpenLayers-2.11/OpenLayers.js"></script>
 <script src="resources/javascript/panZoom.js"></script>
 
