Work in progress: - replicated most functionality and styling of OpenLayers map to Leaflet - updated userInterface.js to work with Leaflet events

--- a/geoportal/src/main/webapp/resources/css/google.css
+++ b/geoportal/src/main/webapp/resources/css/google.css
@@ -1,4 +1,5 @@
 /* attribution displayed elsewhere */
+/*
 .olLayerGoogleCopyright {
 	 display: none;
 }
@@ -23,3 +24,4 @@ div.googleLogo a > div {
     height: 20px;
     width: 110px;
 }
+*/
