--- a/geoportal/src/main/webapp/resources/css/mapDiv.css
+++ b/geoportal/src/main/webapp/resources/css/mapDiv.css
@@ -116,7 +116,7 @@
 	box-shadow: 2px 5px 4px -1px #777777;
 
 }
-
+/*
 div.olControlMousePosition {
 	background: linear-gradient(rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0.05));
     background: -moz-linear-gradient(right, rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0.05)) repeat scroll 0 0 rgba(255, 255, 255, 0);
@@ -206,84 +206,6 @@ div.olControlMousePosition {
 	position: relative;
 }
 
-.olControlNavigationHistory {
-	background-image: none;
-	background-repeat: no-repeat;
-    height: 38px !important;
-    width: 30px !important;
-	cursor: pointer;
-}
-
-.olControlNavigationHistoryPreviousItemActive {
-    background: url("/resources/media/ogp-sprite.png") no-repeat scroll -31px -139px transparent !important;
-}
-
-.olControlNavigationHistoryPreviousItemActive:hover {
-	background: url("/resources/media/ogp-sprite.png") no-repeat scroll -31px -183px transparent;
-}
-
-.olControlNavigationHistoryPreviousItemInactive {
-    background: url("/resources/media/ogp-sprite.png") no-repeat scroll -31px -139px transparent !important;
-}
-
-.olControlNavigationHistoryNextItemActive {
-    background: url("/resources/media/ogp-sprite.png") no-repeat scroll -61px -139px transparent !important;
-}
-
-.olControlNavigationHistoryNextItemActive:hover {
-	background: url("/resources/media/ogp-sprite.png") no-repeat scroll -61px -183px transparent;
-}
-
-.olControlNavigationHistoryNextItemInactive {
-    background: url("/resources/media/ogp-sprite.png") no-repeat scroll -61px -139px transparent !important;
-}
-
-.olControlPanel .olControlNavigationItemActive {
-	background: url("/resources/media/ogp-sprite.png") no-repeat scroll -122px -183px transparent;
-	width: 38px;
-	height: 38px;
-	cursor: pointer;
-}
-
-.olControlPanel .olControlNavigationItemInactive {
-	background: url("/resources/media/ogp-sprite.png") no-repeat scroll -122px -139px transparent;
-	width: 38px;
-	height: 38px;
-	cursor: pointer;
-}
-
-.olControlPanel .olControlNavigationItemInactive:hover {
-	background: url("/resources/media/ogp-sprite.png") no-repeat scroll -122px -183px transparent;
-}
-
-.olControlPanel .olControlZoomBoxItemActive {
-	background: url("/resources/media/ogp-sprite.png") no-repeat scroll -91px -183px transparent;
-	width: 31px;
-	height: 38px;
-	cursor: pointer;
-}
-
-.olControlPanel .olControlZoomBoxItemInactive {
-	background: url("/resources/media/ogp-sprite.png") no-repeat scroll -91px -139px transparent;
-	width: 31px;
-	height: 38px;
-	cursor: pointer;
-}
-
-.olControlPanel .olControlZoomBoxItemInactive:hover {
-	background: url("/resources/media/ogp-sprite.png") no-repeat scroll -91px -183px transparent;
-}
-
-.olControlPanel .olControlZoomToMaxExtentItemInactive {
-	background: url("/resources/media/ogp-sprite.png") no-repeat scroll 0 -139px transparent;
-	width: 31px;
-	height: 38px;
-	cursor: pointer;
-}
-
-.olControlPanel .olControlZoomToMaxExtentItemInactive:hover {
-	background: url("/resources/media/ogp-sprite.png") no-repeat scroll 0 -183px transparent;
-}
 
 .zoomPlus {
 	background: url("/resources/media/ogp-sprite.png") no-repeat scroll -165px -12px transparent;
@@ -304,7 +226,7 @@ div.olControlMousePosition {
     -moz-box-shadow: 3px 0 5px -1px #777777;
     -webkit-box-shadow: 3px 0 5px -1px #777777;
     box-shadow: 3px 0 5px -1px #777777;
-}
+}*/
 
 .viewport {
 	position: absolute;
@@ -317,7 +239,7 @@ div.olControlMousePosition {
 .leaflet-left {
 	left: 25px;
 }
-
+/*
 .olHandlerBoxZoomBox {
 	border: 2px solid red;
 	position: absolute;
@@ -352,7 +274,7 @@ div.olControlMousePosition {
 .olImageLoadError {
 	background-color: pink;
 	opacity: 0.5;
-	filter: alpha(opacity = 50); /* IE */
+	filter: alpha(opacity = 50); !* IE *!
 }
 
 #OpenLayers.Map_46_GMap2Container {
@@ -384,6 +306,6 @@ div.olMap .eventMask {
     height: 100%;
     left: 0;
     top: 0;
-}
+}*/
 
 
