WIP: not ready to run readded home page footer

--- a/geoportal/src/main/resources/templates/ogp_home.html
+++ b/geoportal/src/main/resources/templates/ogp_home.html
@@ -189,7 +189,7 @@
 </div>
 
 <div id="footer">
-    <!-- <div id="footerLogos">
+    <div id="footerLogos">
         <div class="institutionLogo" title="Tufts"
             onclick="location.href='http://tufts.edu'"></div>
         <div class="itLogo infoLinks" title="TTS"
@@ -198,7 +198,7 @@
         <div class="gisLogo infoLinks" title="GIS@Tufts"
             onclick="location.href='http://gis.tufts.edu'">GIS@Tufts.edu</div>
 
-    </div>-->
+    </div>
     <span id="footerInfo"> <span id="ogpLink" class="infoLinks"
                                  onclick="location.href='http://www.opengeoportal.org'">Powered
 			by OpenGeoportal</span>
