WIP: not ready to run Removed solr.js and references from client code Removed solr url from client code Removed config/general endpoint that contained solr url (unused anyway) Solr Url no longer passed through HomeController template

--- a/geoportal/src/main/resources/templates/ogp_home.html
+++ b/geoportal/src/main/resources/templates/ogp_home.html
@@ -8,7 +8,6 @@
         OpenGeoportal = {};
         OpenGeoportal.Config = {};
         OpenGeoportal.Config.analyticsId=[[${analyticsId}]];
-        OpenGeoportal.Config.searchUrl=[[${searchUrl}]];
         OpenGeoportal.Config.loginRepository=[[${loginRepository}]];
         OpenGeoportal.Config.loginType=[[${loginType}]];
         OpenGeoportal.Config.loginUrl=[[${aloginUrl}]];
@@ -220,9 +219,7 @@
             Open Geoportal</a>. The Open Geoportal is a consortium comprised of
             contributions of several universities and organizations to help
             facilitate the discovery and acquisition of geospatial data across
-            many organizations and platforms. Current partners include: Harvard,
-            MIT, MassGIS, Princeton, Columbia, Stanford, UC Berkeley, UCLA, Yale,
-            and UConn. Built on open source technology, The Open Geoportal
+            many organizations and platforms. Built on open source technology, The Open Geoportal
             provides organizations the opportunity to share thousands of
             geospatial data layers, maps, metadata, and development resources
             through a single common interface.
