WIP: not ready to run updated config to clarify what property values do updated config to support restricted geoserver with basic auth

--- a/geoportal/src/main/resources/templates/ogp_home.html
+++ b/geoportal/src/main/resources/templates/ogp_home.html
@@ -20,7 +20,6 @@
         OpenGeoportal.Config.loginRepository=[[${loginRepository}]];
         OpenGeoportal.Config.loginType=[[${loginType}]];
         OpenGeoportal.Config.loginUrl=[[${loginUrl}]];
-        OpenGeoportal.Config.sd=[[${secureDomain}]];
         OpenGeoportal.Config.shareIds=[[${shareIds}]];
         OpenGeoportal.Config.shareBbox=[[${shareBbox}]];
         OpenGeoportal.Config.basemap=[[${basemap}]];
@@ -28,6 +27,7 @@
         OpenGeoportal.Config.DataTypesBootstrap = [(${dataTypes})];
         OpenGeoportal.Config.ProxyCollectionBootstrap = [(${proxies})];
         OpenGeoportal.Config.RepositoriesBootstrap = [(${repositories})];
+        OpenGeoportal.Config.BasicRestrictedRepositories = [(${basicRestrictedRepositories})]
         OpenGeoportal.Config.userStateBootstrap = {};
     </script>
 
