WIP: not ready to run updated javascript dependencies included javascript libraries (no longer cdn links)

--- a/geoportal/src/main/resources/static/css/dialogs.css
+++ b/geoportal/src/main/resources/static/css/dialogs.css
@@ -30,7 +30,7 @@
 }
 
 #toMetadataTop:hover {
-    background: url("/resources/media/arrow_up_white.png") no-repeat scroll 5px 50% black;
+    background: url("../media/arrow_up_white.png") no-repeat scroll 5px 50% black;
 }
 
 #toMetadataTop > span {
