--- a/geoportal/src/main/resources/static/css/header.css
+++ b/geoportal/src/main/resources/static/css/header.css
@@ -11,11 +11,13 @@
 #logo > div {
     display: inline-block;
     vertical-align: top;
+	padding: 0 3px;
 }
 
 #logo > div.logoText {
 	margin-left: -9px;
 }
+
 
 /*
 #footerLogos .institutionLogo {
