--- a/geoportal/src/main/resources/templates/ogp_home.html
+++ b/geoportal/src/main/resources/templates/ogp_home.html
@@ -32,17 +32,18 @@
     </script>
 
 
-    <script src="//cdn.jsdelivr.net/underscorejs/1.8.3/underscore-min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="//cdn.jsdelivr.net/backbonejs/1.3.3/backbone-min.js"></script>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="javascript/underscore-umd-min-1.13.2.js"></script>
+    <script src="javascript/jquery/js/jquery-3.6.0.min.js"></script>
+    <script src="javascript/backbone-min-1.4.0.js"></script>
+
+    <script src="javascript/jquery-ui-1.13.0.custom/jquery-ui.js"></script>
 
     <script src="javascript/jquery.scrollTo-min.js"></script>
     <script src="javascript/spinners/spinners/spinners.min.js"></script>
     <script src="javascript/jquery.ba-postmessage.min.js"></script>
-    <script th:src="|https://maps.google.com/maps/api/js?v=3.30&key=${gmapsAPIKey}|"></script>
-    <script src="javascript/openlayers/ol2-release-2.13.1/OpenLayers-min.js"></script>
+    <script th:src="|https://maps.google.com/maps/api/js?v=3&key=${gmapsAPIKey}|"></script>
+    <script src="javascript/openlayers/OpenLayers-2.11/OpenLayers.js"></script>
     <script src="javascript/panZoom.js"></script>
 
     <link rel="stylesheet" href="css/jquery-ui-ogpTheme.custom.css" type="text/css" />
