--- a/geoportal/src/main/resources/templates/ogp_home.html
+++ b/geoportal/src/main/resources/templates/ogp_home.html
@@ -1,4 +1,5 @@
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
