--- a/geoportal/src/main/resources/css/dialogs.css
+++ b/geoportal/src/main/resources/css/dialogs.css
@@ -190,6 +190,10 @@ span.columnNote {
     margin: 4px;
 }
 
+.owsServicesLinkContainer input {
+    margin: 4px;
+}
+
 .genericModalDialog {
     padding: 1.5em 1.5em 0 !important;
 }
